--- a/Sections/00_Title_Saclay.tex
+++ b/Sections/00_Title_Saclay.tex
@@ -65,18 +65,18 @@ Propriétés catalytiques à l'échelle nanométrique sondées par diffraction d
 \arrayrulecolor{Prune}
 {\footnotesize \textbf{Composition du jury}}\\
 & \\
-\textbf{Alessandro Coati} & Présidente \\
-Dr., Synchrotron SOLEIL & \\
+% \textbf{Sylvain Ravy} & Président \\
+% Dr., Synchrotron SOLEIL & \\
 \textbf{Andreas Stierle} & Rapporteur \\
 Professor, University of Hamburg / DESY & \\
 \textbf{Thomas Cornélius} & Rapporteur \\
 Directeur de Recherche, IM2NP & \\
 \textbf{Dina Carbone} & Examinatrice \\
 Researcher, Lund University & \\
-\textbf{Claire Lauhle} & Examinatrice \\
-Maitre de conférence, Université Paris-Saclay & \\
+% \textbf{Alessandro Coati} & Examinateur \\
+% Maitre de conférence, Université Paris-Saclay & \\
 \textbf{Virginie Chamard} & Examinatrice \\
-Chargée de Recherche, Institut Fresnel & \\
+Directrice de Recherche, Institut Fresnel & \\
 
 \end{tabular} 
 
