--- a/Sections/1_Introduction/AmmoniaOxidation.tex
+++ b/Sections/1_Introduction/AmmoniaOxidation.tex
@@ -349,7 +349,7 @@ Such reactors are closed environment penetrable by x-rays, and accommodating a w
 
 % single crystals
 The samples often used during SXRD and XPS experiments are single crystals, much larger than industrial samples.
-For example, the industrial gauzes used during the oxidation of ammonia have a diameter of about \qty{70}{\um}, whereas single crystals are typically \unit{\cm} large (fig. \ref{fig:Samples}).
+For example, the industrial gauzes used during the oxidation of ammonia have a diameter of about \qty{70}{\um}, whereas single crystals are typically \unit{\cm} large (fig. \ref{fig:SamplesIntro}).
 These kind of samples only exhibit a single type of structure on their surface (e.g. (111), (100)), reducing the complexity of the catalyst surface.
 The reason behind their use is a large surface area exposed to the reacting gases, and thus an increased surface signal, most important to understand heterogeneous catalysis which is a surface process \parencite{Goodman1994}.
 Nevertheless, they can show some limitations, for example large Pt(111) single-crystals also exhibit a significant amount of steps on their surface also contributing to the catalytic activity \parencite{CalleVallejo2017}.
@@ -366,14 +366,14 @@ Nevertheless, they can show some limitations, for example large Pt(111) single-c
     The orientation of each facet on the particle surface is indicated.
     Pt $(111)$ single crystal used in SXRD and XPS experiments, diameter of about \qty{8}{\mm} (right).
     }
-    \label{fig:Samples}
+    \label{fig:SamplesIntro}
 \end{figure}
 
 % nanoparticles
 Only recently have supported platinum nanoparticles nanoparticles (\qty{\approx 1}{\nm} large) been used during the oxidation of ammonia, showing a remarkable selectivity towards \ce{NO} at high temperature and atmospheric pressure \parencite{Schaffer2013}.
 Reducing Pt supported nanoparticles by \ce{H_2} showed to improve their catalytic activity below \qty{200}{\degreeCelsius} in a study aiming at the production of \ce{N_2} \parencite{Svintsitskiy2020}.
 Similarly, supported palladium nanoparticles have shown high selectivity towards production of \ce{N_2} in the selective catalytic oxidation of \ce{NH_3} below \qty{200}{\degreeCelsius} \parencite{Dann2019}.
-Nanoparticles allow to better understand heterogeneous catalysis since they exhibit a various amount of active sites such as different facets (e.g. (111), (110), (100), ...), edges, corners and defects (fig. \ref{fig:Samples}).
+Nanoparticles allow to better understand heterogeneous catalysis since they exhibit a various amount of active sites such as different facets (e.g. (111), (110), (100), ...), edges, corners and defects (fig. \ref{fig:SamplesIntro}).
 They are thus considered to be a good approximation of real catalysts \parencite{Somorjai2007, Molenbroek2009, Cuenya2010, Kwangjin2012, Schauermann2013}.
 Studies have shown that nanoparticle surface strain can be controlled, opening up a new path to tune and optimise nanoparticle catalysts \parencite{Zhang2014, Sneed2015, Wang2016}.
 
