--- a/Sections/3_Results_Nanoparticles/BCDITempRamp.tex
+++ b/Sections/3_Results_Nanoparticles/BCDITempRamp.tex
@@ -1,4 +1,4 @@
-\section{Single Pt nanoparticles structure evolution studied by BCDI}\label{sec:BCDINanoparticles}
+\section{Single Pt nanoparticles: BCDI}\label{sec:BCDINanoparticles}
 
 % add facets on top and bottom of the particle in the image
 % add figure ortho data
