--- a/Sections/3_Results_Nanoparticles/Introduction.tex
+++ b/Sections/3_Results_Nanoparticles/Introduction.tex
@@ -11,7 +11,7 @@ Using single crystals as models to understand \textit{in-situ} and \textit{opera
 However, they fail when aiming at closing the material gap since they only exhibit a single crystallographic orientation on their surface, and are much larger (almost a \unit{cm} large) than the width of Pt-Rh gauzes used for the oxidation of ammonia (few 10s of \unit{\micro\meter} large, \cite{Kaiser1909}).
 
 % use nanoparticles
-In order to push for the reduction of the material gap as well as the pressure gap in heterogeneous catalysis, Pt nanoparticles have been used in this study, approaching the size of individual grains on the industrial catalysts while exhibiting many different types of facets on their surface.
+In order to push for the reduction of the material gap in heterogeneous catalysis, Pt nanoparticles have been used in this study, approaching the size of individual grains on the industrial catalysts while exhibiting many different types of facets on their surface.
 Specifically, the catalytic structure-activity relationships of Pt nanoparticles will be investigated during the oxidation of ammonia, as a stepping stone to the study of Pt-Rh nanoparticles, approaching real industrial catalysts.
 Indeed, if Pt-Rh nanoparticles have recently been successfully studied with BCDI during the oxidation of carbon monoxide \parencite{Kim2021}, the presence of compositional strain in bi-metallic catalysts makes the study of surface strain increasingly difficult \parencite{Kawaguchi2019}.
 
@@ -100,7 +100,7 @@ The catalytic activity of the platinum nanoparticles was first studied as a func
 Similar scans where also performed on the empty reactor/sample holder to ensure the absence of activity towards the oxidation of ammonia.
 
 The heater temperature was calibrated by measuring the temperature in the reactor at different pressures by the means of a type K thermocouple, as a function of the current intensity (fig. \ref{fig:TempRamps} - a), \qty{10}{\minute} separate consecutive datapoints to ensure the heater stability.
-The experimental data points were fit to be able to set the reactor to any temperature from \qtyrange{25}{600}{\degreeCelsius} when working under vacuum or at ambient pressure (\qty{0.3}{\bar} or \qty{0.3}{\bar} of \ce{Ar}).
+The experimental data points were fit to set the reactor to any temperature from \qtyrange{25}{600}{\degreeCelsius} when working under vacuum or at ambient pressure (\qty{0.3}{\bar} or \qty{0.3}{\bar} of \ce{Ar}).
 The thermal conductivity of the gases involved in the oxidation of ammonia are in the similar order of magnitude (tab. \ref{tab:ThermalConductivity}).
 Moreover, the same inert gas used to set the reactor pressure - Argon - is used as a carrier gas during the experiments, constituting at least \qty{80}{\percent} of the gas flow, and allowing us to assume that the temperature in the reaction chamber is well approximated.
 
