--- a/Sections/3_Results_Nanoparticles/SXRDNanoparticles.tex
+++ b/Sections/3_Results_Nanoparticles/SXRDNanoparticles.tex
@@ -1,4 +1,4 @@
-\section{Collective behaviour of Pt nanoparticles studied by surface x-ray diffraction}
+\section{Collective behaviour of Pt nanoparticles: SXRD}
 
 % Compare shape with wulff construction and other measurements
 % Get particle average size from epitaxy
