--- a/Sections/4_Results_SingleCrystals/Conclusion.tex
+++ b/Sections/4_Results_SingleCrystals/Conclusion.tex
@@ -1,14 +1,65 @@
 \section{Discussion}
 
-\textcolor{red}{This chapter covers three areas: analysis of the data; discussion of the results of the analysis; and how your findings relate to the literature. The analysis of the data can be discussed here but the details of any analysis, such as statistical calculations, should be shown in the appendices. You should present any discussion clearly and logically and it should be relevant to your research questions/hypotheses or aims and objectives. Insert any tables or figures that you decide are important in a relevant part of the text not in the appendices, and discuss them fully. Make sure that you relate the findings of your primary research to your literature review. You can do this by comparison: discussing similarities and particularly differences. If you think your findings have confirmed some literature findings, say so and say why. If you think your findings are at variance with the literature, say so and say why.}
+In this chapter was presented the structural and chemical evolution of Pt(111) and Pt(100) single crystals during ammonia oxidation.
+The pre-oxidation of the platinum surfaces under \qty{80}{\milli\bar} of oxygen has allowed the identification of different surface reconstructions and oxides.
 
-The differents results found on the Pt(111) and Pt(100) single crystals are resumed in tab. \ref{tab:ResultsSingleCrystals}.
+%%%%%%%%%%%%%%%% high oxygen%%%%%%%%%%%%%%%%
+% oxides Pt(111)
+For Pt(111), a Pt(111)-p(8x8)-R\ang{0} arrangement was measured (fig. \ref{fig:MapsPt111A} - d), preceded by two Pt(111)-p(6x6)-R\ang{\pm 8.8} structures (without second order peaks) (fig. \ref{fig:MapsPt111A} - c).
+Some of the peaks belonging to the rotated structure can also be described with the following matrix notation: Pt(111)-p$\begin{pmatrix} 1.08 & -0.21 \\ -0.21 & 1.08 \end{pmatrix}$-R\ang{0}, effectively describing a unit cell with a second order peak (fig. \ref{fig:MapsPt111A} - c).
+The Pt(111)-p(8x8)-R\ang{0} was linked to the known $\alpha$-\ce{PtO_2} surface oxide from the magnitude of the lattice parameter and comparison with literature reports under comparable atmospheres.
+Out-of-plane measurements have shown that the Pt(111)-p(8x8)-R\ang{0} structure is compatible with a bi- or tri-layer structure (fig. \ref{fig:LScans80}), whereas the other peaks are more linked to monolayers (fig. \ref{fig:LScans80} - app. \ref{fig:LScans05}).
+The complete understanding of the out-of-plane structures will be the subject of additionnal work.
+A precursor relation was hypothetised between the Pt(111)-p(6x6)-R\ang{\pm 8.8} structures and Pt(111)-p(8x8)-R\ang{0} by time-resolved diffraction studies, under a lowered oxygen atmosphere (fig. \ref{fig:HexBraggPeaks}).
+The importance of the partial pressure of oxygen in the growth kinetics are have also been highlighted.
 
+% oxides Pt(100)
+On Pt(100), a bulk \ce{Pt_3O_4} oxide was identified during exposure to \qty{80}{\milli\bar} of oxygen (fig. \ref{fig:MapsPt100A} - b, fig. \ref{fig:FitPt100LScans}), but not under \qty{5}{\milli\bar} (fig. \ref{fig:MapsPt100D}), which shows the importance of the total pressure on the growth of \ce{Pt_3O_4}.
+\ce{Pt_3O_4} follows a Pt(100)-p(2x2)-R\ang{0} arrangement on the Pt(100) surface (app. \ref{fig:Pt3O4onPt100}).
+A second family of peaks was measured under high oxygen pressure (fig. \ref{fig:MapsPt100A} - b), slighty shifted in H or K with respect to the \ce{Pt_3O_4} peaks measured at $L=0$.
+The shift was determined to depend on the elapsed time under oxygen atmopshere, two values were measured, $\delta_{H,K}=0.07$ and $\delta_{H,K}=0.09$, respectively after \qty{3}{\hour} (fig. \ref{fig:MapsPt100A} - b) and \qty{1}{\hour} (fig. \ref{fig:MapsPt100B} - b) of measurement.
+No clear unit cell could be associated to the shifted peaks, the related out-of-plane signal is compatible with the existence of a monolayer on the Pt(100) surface (fig. \ref{fig:LScansHighOxygenPt100}).
+Transient structures were observed at low oxygen pressures, which disappeared in the second measurement after \qty{5}{\hour} of elapsed time (fig. \ref{fig:MapsPt100D}).
 
-No commensurate mesh with respect to substrate found for rotated hex structures
+% CTR
+The measurement of crystal truncation rods revealed more important intensity changes on the Pt(100) surface (fig. \ref{fig:CTRPt100}) in comparison the Pt(111) surface during the oxidation cycle (fig. \ref{fig:CTRPt111}).
+For both surfaces (fig. \ref{fig:CTRFit111} - a, \ref{fig:CTRFit100} - a), the maximal roughness value was found during exposition to high oxygen atmosphere, consistent with the formation of surface oxides under oxygen pressure.
+Out-of-plane surface strain on Pt(111) was estimated to be contained on the topmost atomic layer, the presence of surface oxide structures was associated with compressive strain with respect to the initial values under argon atmosphere (fig. \ref{fig:CTRFit111} - b).
+The influence of bulk \ce{Pt_3O_4} grown on Pt(100) under high oxygen atmosphere on the surface strain could not be estimated, a lower oxygen atmosphere was related to compressive out-of-plane strain.
+\ce{Pt_3O_4} was shown to not grow in a homogeneous layer, but rather in terms of islands with different heights (fig. \ref{fig:CTRFitHighOxygen}).
 
+% XPS
+The XPS experiment was conducted at similar oxygen to ammonia ratio, but with a decreased total pressure.
+The highest oxygen pressure reached during the XPS experiment is \qty{8.8}{\milli\bar}, in the same order of magnitude as the low oxygen pressure condition for SXRD (\qty{5}{\milli\bar}).
+Adsorbed oxygen and hydroxyl groups were indentified by XPS on both surfaces (fig. \ref{fig:O1sN1sPt111}, \ref{fig:O1sN1sPt100}) during this condition, as well as under reduced oxygen pressure (\qty{0.55}{\milli\bar}).
+The duration of the high oxygen condition of Pt(111) was not long enough to enable the growth of the Pt(111)-(8x8)-R\ang{0} structure if dynamics at \qty{8.8}{\milli\bar} can be translated to \qty{5}{\milli\bar} (\qty{23}{\hour} vs. \qty{5}{\hour}).
+Therefore, only the Pt(111)-(6x6)-R\ang{0} structure is expected to yield an additionnal peak in the O 1s and Pt 4f levels, additionnal peaks of low intensity were effectively identified in the Pt 4f level (fig. \ref{fig:Pt4fPt111}).
+Interestingly, a third peak between \ce{OH_a} and \ce{O_a} was identified for Pt(100), which could be linked to the presence of the transient structures measured with SXRD under \qty{5}{\milli\bar} of oxygen (fig. \ref{fig:MapsPt100D}).
+A large peak was also measured in the Pt 4f level at \qty{71.8}{\eV} (fig. \ref{fig:Pt4fPt100}).
 
-Surface and bulk oxides cannot be linked to an increase of decrease of the catalytic activity and thus do not seem to take part in the reaction mechanism.
+%%%%%%%%%%%%%%%%%%%% o2/nh3=8 %%%%%%%%%%%%%%%%%%%%
+% Pt(111)
+None of the aforementionned structures were measured under reacting conditions on Pt(111), for both \ce{O_2}/\ce{NH_3} ratios (\num{8} and \num{0.5}, fig. \ref{fig:MapsPt111B} - a \& b), which underlines that platinum oxides are not stable during the catalytic oxidation of ammonia on Pt(111) under the current conditions.
+Adsorbed nitrogen species (\ce{N_a}, \ce{NH_x}) were observed in the Pt4f (fig. \ref{fig:Pt4fPt111}) and N 1s (fig. \ref{fig:O1sN1sPt111}) levels, but without related surface reconstructions observable by SXRD on Pt(111) (fig. \ref{fig:MapsPt111B} - c).
+Only adsorbed water was measured during the oxidation of ammonia in the O 1s level.
+
+% Pt(100)
+In contrast with Pt(111), reacting conditions were found to be linked with the appearance of surface reconstructions on Pt(100), depending on prior oxygen exposure time.
+After oxygen exposure for approximately \qty{17}{\hour}, the subsequent introduction of ammonia was linked to the removal of the shifted peaks near \ce{Pt_3O_4} signals (fig. \ref{fig:MapsPt100B} - a).
+Both \ce{Pt_3O_4} and shifted signals could again be measured during a second exposure of the cleaned sample to oxygen for approximately \qty{1}{\hour} (fig. \ref{fig:MapsPt100B} - b).
+
+The following introduction of ammonia was seen to induce signals compatible with Pt(100)-p(10x10)-R\ang{0} surface reconstructions on the Pt(100) surface unit cell direction (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a).
+Some periodicity can be observed in the related out-of-plane signals at [H, K] = [0, -1.2] and [H, K] = [0.5, -1], high intensity peaks are observed at $L=1$ and $L=2$ for the measurement at [H, K] = [1.9, 0], which can link the Pt(100)-p(10x10)-R\ang{0} surface reconstructions with the presence of 3D structures.
+Additionnal in-plane signals are observed in fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} (a), shifted by the same amount $\delta_{H, K}=0.09$ as the signals present under high oxygen atmosphere (fig. \ref{fig:MapsPt100B} - b).
+The intensity of this signal as a function of $L$ was measured at [H, K] = [0.5, -0.91], decreasing with $L$, and thus showing no out-of-plane periodicity.
+
+Lowering the \ce{O_2}/\ce{NH_3} ratio to \num{0.5} has induced the removal of the Pt(100)-p(10x10)-R\ang{0} surface reconstructions and the apperance of Pt(100)-p(33x25)-R\ang{0} hexagonal surface reconstruction, with an out-of-plane signal consistent with that of monolayers (fig. \ref{fig:MapsAndLScansPt100LowOxAmmonia}).
+Removing oxygen from the reactor resulted in the progressive removal of the hexagonal reconstruction (fig. \ref{fig:MapsPt100C}), clearly linked to the simultaneous presence of both reagents.
+
+Another key difference with Pt(111) is reported in the XPS spectra for Pt(100), with the presence of oxygen species in the O 1s level during reacting condition when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} (fig. \ref{fig:O1sN1sPt100}), but not when this ratio is reduced to \num{0.5} by lowering the oxygen pressure.
+No adsorbed nitrogen specie was identified when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{8} in the N 1s level  (fig. \ref{fig:O1sN1sPt100}).
+Therefore, the Pt(100)-p(10x10)-R\ang{0} surface reconstruction can be linked to the presence of ordered oxygen on the Pt(100) surface, which is only permitted by the simultaneous presence of ammonia, \textit{i.e.} linked to the reaction mechanim.
+Additionally, the selectivity towards \ce{NO} in comparison with \ce{N_2} is much more important than for Pt(111) (fig. \ref{fig:RGA450Pt111AndPt100}), which highlights the importance of oxygen adsorbed on the catalyst surface to facilitate the production of \ce{NO}.
 
 \begin{figure}[!htb]
     \centering
@@ -22,3 +73,46 @@ Surface and bulk oxides cannot be linked to an increase of decrease of the catal
     \label{fig:RGA450Pt111AndPt100}
 \end{figure}
 
+This difference in selectivity is not observed during the SXRD experiments, this can be related to the position of the gas outlet far away from the sample (fig. \ref{fig:SampleHolder}), in comparison with the XPS experiment where the analyser nose is situated a few milimeters away from the sample surface (fig. \ref{fig:SampleSXRD} - c).
+The contribution of the sample edges (fig. \ref{fig:SampleSXRD} - b), as well as the presence of steps on the single crystal surface may lower the specific contribution of the sample surface.
+% also total pressure?
+
+% roughness
+The persisting presence of oxygen on the Pt(100) surface can also be linked to the different evolution of the two catalysts surface roughness.
+The roughness on the Pt(111) surface decreases during ammonia oxidation (fig. \ref{fig:CTRFit111} - a), consistent with the removal of surface oxides following the introduction of ammonia.
+Indeed, low roughness is already achieved when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{0.5} (fig. \ref{fig:CTRFit111} - a).
+For Pt(100), reacting conditions can also be associated to a decreasing roughness following pure oxygen atmopshere (fig. \ref{fig:CTRFit100} - a).
+However, the minimal roughness is only reached once oxygen is completely removed from the reactor, \textit{i.e.} after the oxidation cycle.
+The surface reconstructions present on the Pt(100) surface during reacting conditions can be linked to the remaining high roughness (fig. \ref{fig:MapsAndLScansPt100HighOxAmmonia} - a, \ref{fig:MapsAndLScansPt100LowOxAmmonia} - a), whereas Pt(111) exhibits a bulk terminated surface (fig. \ref{fig:MapsPt111B} - a \& b).
+
+% surface strain
+A similar behaviour is observed for the out-of-plane lattice strain.
+The introduction of ammonia on Pt(111) was accompanied by a progressive reversal of the strain state, returning to the initial values measured under inert atmosphere when the \ce{O_2}/\ce{NH_3} ratio is equal to \num{0.5} (fig. \ref{fig:CTRFit111} - b).
+For Pt(100), both reacting conditions show a strain state similar to the initial state under inert atmosphere (fig. \ref{fig:CTRFit100} - b).
+
+%%%%%%%%%%%%%%%%%%%% Pure nh3 %%%%%%%%%%%%%%%%%%%%
+
+Stopping the oxidation reaction by removing oxygen has finally resulted in the removal of surface reconstructions on the Pt(100) surface (fig. \ref{fig:MapsPt100C} - a).
+If the oxygen pressure is seen to decrease directly after the change of condition in the RGA signal (fig. \ref{fig:RGA450Pt100Cycle}), the hexagonal reconstruction are still measured in the first half of the in-plane reciprocal space map, \textit{i.e.} during the first hours of measurement.
+It is possible that this progressive removal of the hexagonal surface reconstruction is due to a slow transition between adsorbed nitrogen (\ce{N_a}) measured during the reaction, and adsorbed de-hydrogenated species observed only in the abscence of oxygen (fig. \ref{fig:O1sN1sPt100} \& \ref{fig:Pt4fPt100}).
+The largest transition in terms of surface strain is also during this change of condition for Pt(100), as the topmost layer goes from important compressive strain to almost bulk atomic positions for the Pt atoms (fig. \ref{fig:CTRFit100} - b).
+Atomic nitrogen is also observed in the N 1s level of Pt(111) (fig. \ref{fig:O1sN1sPt111}), but together with other nitrogen species (fig. \ref{fig:O1sN1sPt111} - \ref{fig:Pt4fPt111}), possibly impinging on its long-range ordering.
+No important change is measured in strain while removing oxygen on Pt(111) (fig. \ref{fig:CTRFit111} - b), supporting the link between surface reconstruction and out-of-plane strain.
+
+%%%%%%%%% Argon %%%%%%%
+
+The return to inert atmosphere after the oxidation cycle has shown that the final catalyst surface is more smooth from the roughness evolution (fig. \ref{fig:CTRFit111} - b, \ref{fig:CTRFit100} - b), without any adsorbed nitrogen or oxygen species (fig. \ref{fig:O1sN1sPt111}, \ref{fig:O1sN1sPt100}), and overall weaker strain values than during the reacting conditions.
+For both surfaces, the surface roughness and strain are lower than measured at first under argon.
+
+% Discuss role of bulk oxides
+There is no apparent role of surface and bulk oxides on the Pt(111) surface, as the structures growing under high oxygen pressure have been removed directly during the reaction.
+Pt(111)-p(8x8)-R\ang{0} and Pt(111)-p(6x6)-R\ang{0} cannot be linked to an increase of decrease of the catalytic activity, and thus do not seem to take part in the reaction mechanism.
+
+\ce{Pt_3O_4}, observed here in the Pt(100)-p(2x2)-R\ang{0} arrangement, has been proven to be a source of oxygen atoms sustaining the catalytic oxygenation of \ce{CO} \textit{via} a Mars Van Krevelen mechanism \parencite{Seriani2006, Seriani2008}.
+In the current experiment, a second structure possibly related to \ce{Pt_3O_4} was measured.
+When under reacting conditions favouring \ce{NO}, which is the desired product for the Ostwald process, the in-plane peaks related to both structures were still measured, but being part of a Pt(100)-p(10x10)-R\ang{0} reconstruction.
+The presence of bulk \ce{Pt_3O_4} is clearly ruled out.
+Nevertheless, it is possible that the reconstruction is due to the interaction of surface \ce{Pt_3O_4} with ammonia, resulting in an increased selectivity towards \ce{NO}.
+Reducing the oxygen to ammonia ratio is linked to the reconstruction removal, the stopping of \ce{NO} production, as well as the removal of the adsorbed oxygen peak in the O 1s level.
+
+It is of key importance to understand the role of platinum oxides in the ammonia oxidation to push the selectivity towards nitrogen oxide at relevant pressure and temperature conditions.
