--- a/Sections/4_Results_SingleCrystals/Introduction.tex
+++ b/Sections/4_Results_SingleCrystals/Introduction.tex
@@ -2,98 +2,112 @@
 
 % introduce sxrd
 Past ammonia oxidation experiments on \ce{Pt_{25}Rh_{75}} (100) \parencite{Resta2020a} single-crystals gave significant new insights on the relaxation dynamics when the system crosses the catalyst activation barrier.
-The experiment focused on measuring the catalyst selectivity after the light off temperature (at \qty{175}{\degreeCelsius} and \qty{375}{\degreeCelsius}).
-It was found that the transition from a nitrogen-rich to oxygen-rich input mixture coincides with a relaxation change in the topmost metallic layer: moving from outward to inward, but only for temperatures above the light off.
+The experiment focused on measuring the catalyst selectivity above the light off temperature (at \qty{175}{\degreeCelsius} and \qty{375}{\degreeCelsius}).
+It was found that the transition from a nitrogen-rich to oxygen-rich input mixture coincides with a relaxation change in the topmost metallic layer: moving from outward to inward.
 
 Thanks to near-ambient pressure x-ray photoelectron spectroscopy (NAP-XPS) experiments, nitrogen rich species (such as \ce{N_2}) were associated to out-of-plane expansion of the topmost layer; while oxidative species (such as NO and oxygen) were linked to out-of-plane contraction.
 This change in relaxation has an impact on the band structure and therefore on the catalytic properties as proposed in the d-band model detailed in sec. \ref{sec:Catalysis}.
 Therefore, our intention is to investigate whether this modification in relaxation is specific to the Pt-Rh alloy or if it holds a broader applicability to the constituent elements of the alloy, such as Pt
 Different relaxation states, transient structures, and surface moieties are expected to exist as a function of the ammonia to oxygen ratio.
 
-Moreover, the average shape of multi-faceted nanoparticles was recently measured at the SixS beamline under the oxidation of ammonia using surface x-ray diffraction, which showed a global reshaping of the nanoparticles at \qty{600}{\degreeCelsius} under reacting conditions, favouring \{111\} and \{100\} facets over \{110\} and \{113\} facets, which could be the signature of an important role of surface oxides, stable on the \{111\} and \{100\} facets, to the catalytic activity, as predicted by Seriani et al. \parencite*{Seriani2008}.
-The evolution of two single nanoparticles exhibiting different types of facets on their surfaces was probed with Bragg coherent diffraction imaging, highlighting the importance of the particle shape and surface area of the different crystallographic facets on its behaviour during the ammonia oxidation cycle.
+The previous chapter has highlighted our results on Pt nanoparticles during ammonia oxidation.
+The average shape of multi-faceted Pt nanoparticles was measured at the SixS beamline under the reaction using surface x-ray diffraction.
+A global reshaping of the nanoparticles at \qty{600}{\degreeCelsius} under reacting conditions was put under evidence, favouring \{111\} and \{100\} facets over \{110\} and \{113\} facets.
+This could be the signature of surface oxides playing an important role in the reaction, predicted to be stable on the \{111\} and \{100\} facets by Seriani et al. \parencite*{Seriani2008}.
+The evolution of two single nanoparticles exhibiting different types of facets on their surfaces was probed with Bragg coherent diffraction imaging, highlighting the importance of the particle shape and surface area of the different crystallographic facets on its behaviour during the ammonia oxidation cycle (sec. \ref{sec:BCDIAmmoniaOxidation}).
 
-The 3D displacement and strain evolution of two different facets present of the nanoparticles (\{100\} and \{111\}) will be compared to our results obtained on Pt(100) and (111) crystal surfaces by SXRD, to fully understand the impact of the Pt surface orientation on the catalyst selectivity.
-In-plane reciprocal space maps were first carried out to search for the existence of surface reconstruction from the adsorption of reacting molecules, as well as to assess the potential growth of surface and bulk oxides on the catalyst surface.
+To fully understand the impact of the Pt surface orientation on the catalyst selectivity, the structural evolution of two different single crystals, Pt(111) and Pt(100) will here be measured by SXRD.
+In-plane reciprocal space maps were first carried out to search for new structures and surface reconstructions induced by the reaction environment, as well as to assess the potential growth of surface and bulk oxides on the catalyst surface.
 Crystal truncation rods were measured to probe surface relaxation effects, and to assert the average roughness of the catalyst surface.
-Additional $L$-scans were performed perpendicularly to newly discovered in-plane peaks to investigate the 3D structure of potential surface structures.
-Reflectivity curves were also carried out to obtain complementary information about the formation of new layers on the catalyst surface.
+Additional $L$-scans were performed at HK coordinates of the newly discovered feature to investigate the potential corresponding 3D structures.
+Reflectivity measurements were conducted to gather further insights into the various layers existing on the catalyst surface, along with their respective roughness.
 
 % introduce xps
-Finally, core level photoemission spectroscopy provides different signatures for many moieties adsorbed on the surface during reactions and therefore the possibility to strengthen the links between structure, surface moieties and reaction products.
+Lastly, core-level XPS offers distinct signatures for moieties adsorbed on the surface during reactions. This facilitates the reinforcement of connections between structure, surface moieties, and reaction products.
 In the intent of carrying out complementary NAP-XPS experiments to extend such concept to pure components of the standard catalyst, and to link internal stresses/surface-relaxations obtained from specific crystalline structures with the chemistry on its surfaces, the same Pt(111) and Pt(100) single crystals are used for both SXRD and NAP-XPS.
-For each combination of temperature and ammonia to oxygen ratio, the O 1s, N 1s, and Pt 4f core levels were measured, that should carry information of the surface state, to establish a connection between selectivity, surface moieties, and internal stress.
+For each combination of temperature and ammonia to oxygen ratio, the O 1s, N 1s, and Pt 4f core levels were measured, carrying information on the surface state.
+This approach aimed to establish a connection between selectivity, surface moieties, and internal stress.
 The Fermi edge is also measured after each core level to be able to find the zero binding energy.
 
-The oxidation of ammonia on single crystals was measured at \qty{450}{\degreeCelsius}, a temperature after the catalyst light-off.
-Higher temperatures were avoided in favour of the setup life expectancy in the aggressive reaction environment and the long time required to perform all the measurements.
-To make certain that any surface relaxation effects are related to the presence of both ammonia and oxygen in the reactor, the sample was first exposed to high oxygen atmosphere, at which the potential growth of surface oxides on the catalyst surface was monitored.
-The following introduction of ammonia in the reactor enables us to probe the impact of existing surface oxides on the catalyst selectivity during the reaction, as well as their stability during reaction condition.
-Two different partial pressures of oxygen have been used with the same partial pressure of ammonia to probe the effect of the ammonia to oxygen ratio on the catalyst structure, surface species, and selectivity.
-Finally, only ammonia was kept in the reactor to be able to de-correlate the effect of the presence of ammonia from the simultaneous presence of ammonia and oxygen.
+The oxidation of ammonia on single crystals was measured at \qty{450}{\degreeCelsius}, a temperature above the catalyst light-off.
+Higher temperatures were avoided in favour of the setup life expectancy in the aggressive reaction environment and the long time required to perform all the measurements (at least \qty{12}{\hour}).
+The sample was characterised under argon before (1) and after (6) the oxidation cycle to make sure that the surface state exhibited by the catalyst is reversible.
+To ensure that any surface relaxation effects are attributed to the simultaneous presence of ammonia and oxygen in the reactor, the sample initially underwent exposure to a high-oxygen atmosphere (2), monitoring potential surface oxide growth.
+Subsequent introduction of ammonia (3) facilitated the examination of existing surface oxides' impact on catalyst selectivity during the reaction, as well as their stability under reaction conditions.
+Two different partial pressures of oxygen were employed , alongside the same partial pressure of ammonia (3, 4), to investigate the influence of the ammonia to oxygen ratio on catalyst structure, surface species, and selectivity.
+Maintaining only ammonia in the reactor (5) enabled the separation of the effect of ammonia's presence from the combined presence of ammonia and oxygen.
+Lastly, the sample surface was exposed to a reduced pressure of oxygen, to make certain that the phenomena observed when lowering the \ce{O_2}/\ce{NH_3} ratio by reducing the oxygen pressure are effectively due to the combined presence of the reagents.
 
-The sample was characterised under argon before and after the oxidation cycle to make sure that the surface state exhibited by the catalyst is reversible.
+\begin{table}[!htb]
+\centering
+\resizebox{\textwidth}{!}{%
+    \begin{tabular}{@{}l|lll|l|lll|l@{}}
+    \toprule
+    Order & \multicolumn{3}{l|}{Gas Flow}             & Total pressure      & \multicolumn{3}{l|}{Partial pressures}   & Targeted information \\
+          & \multicolumn{3}{l|}{(\unit{\ml\per\min})} & (\unit{\milli\bar}) & \multicolumn{3}{l|}{(\unit{\milli\bar})} & \\
+    \midrule
+    \midrule
+     & \ce{Ar} & \ce{O_2} & \ce{NH_3} &  & \ce{Ar} & \ce{O_2} & \ce{NH_3} & \\
+    \midrule
+    \midrule
+    1 & 50 & 0 & 0 & 500 & 500 & 0 & 0 & Catalyst state without reactants (unactive) \\
+    2 & 42 & 8 & 0 & 500 & 420 & 80 & 0 & Growth of surface oxides \\
+    3 & 41 & 8 & 1 & 500 & 410 & 80 & 10 & \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio and impact \\ on/of potential surface oxides\end{tabular}} \\
+    4 & 48.5 & 0.5 & 1 & 500 & 485 & 5 & 10 & \\
+    5 & 49 & 0 & 1 & 500 & 490 & 0 & 10 & Ammonia adsorption \\
+    6 & 50 & 0 & 0 & 500 & 500 & 0 & 0 & Returning to pristine state \\
+    7 & 49.5 & 0.5 & 0 & 500 & 495 & 5 & 0 & Growth of surface oxides \\
+    \bottomrule
+    \end{tabular}%
+}
+\caption{
+    Different atmospheres used to probe the ammonia oxidation on Pt(100) and Pt(111) single crystals with SXRD.
+    The duration of each condition was approximately \qty{8}{\hour}.
+    }
+\label{tab:ConditionsSXRD}
+\end{table}
+
 Due to important electron absorption in high atmospheres, the same atmospheres used for \textit{in-situ} and \textit{operando} SXRD cannot be reproduced for NAP-XPS, and the total pressure had to be lowered.
 The total atmosphere is not anymore kept constant by the use of Argon between each condition, while the reactant partial pressure is approximately \qty{10}{\percent} of the partial pressures used in BCDI and SXRD, with an equivalent (\ce{O_2} / \ce{NH_3}) ratio.
 The different conditions are resumed in tab. \ref{tab:ConditionsSXRD} and \ref{tab:ConditionsXPS}.
 
-The use of a residual gas analyser during \textit{in-situ} and \textit{operando} XPS and SXRD experiments allowed us to monitor the sample's catalytic activity.
-
 \begin{table}[!htb]
 \centering
-\resizebox{\textwidth}{!}{%
-    \begin{tabular}{@{}lll|l|lll|l@{}}
+\resizebox{0.8\textwidth}{!}{%
+    \begin{tabular}{@{}l|l|lll|l@{}}
     \toprule
-    \multicolumn{3}{l|}{Gas Flow (\unit{\ml\per\min})} & Total pressure (\unit{\milli\bar}) & \multicolumn{3}{l|}{Partial pressures (\unit{\milli\bar})} & Targeted information \\
+    Order & Total pressure & \multicolumn{3}{l|}{Partial pressures} & Targeted information \\
+     & \unit{\milli\bar}) & \multicolumn{3}{l|}{(\unit{\milli\bar})} & \\
     \midrule
     \midrule
-    \ce{Ar} & \ce{O_2} & \ce{NH_3} &  & \ce{Ar} & \ce{O_2} & \ce{NH_3} &  \\
+     &  & \ce{Ar} & \ce{O_2} & \ce{NH_3} &  \\
     \midrule
     \midrule
-    50 & 0 & 0 & 500 & 500 & 0 & 0 & Catalyst state without reactants (unactive) \\
-    42 & 8 & 0 & 500 & 420 & 80 & 0 & Growth of surface oxides \\
-    41 & 8 & 1 & 500 & 410 & 80 & 10 & \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio and impact \\ on/of potential surface oxides\end{tabular}} \\
-    48.5 & 0.5 & 1 & 500 & 485 & 5 & 10 &  \\
-    49 & 0 & 1 & 500 & 490 & 0 & 10 & Ammonia adsorption \\
-    50 & 0 & 0 & 500 & 500 & 0 & 0 & Returning to pristine state \\
-    49.5 & 0.5 & 0 & 500 & 495 & 5 & 0 & Growth of surface oxides \\
+    1 & 1 & 1 & 0 & 0 & Catalyst state without reactants (unactive) \\
+    2 & 8.8 & 0 & 8.8 & 0 & Growth of surface oxides \\
+    3 & 9.9 & 0 & 8.8 & 1.1 & \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio and impact \\ on/of potential surface oxides\end{tabular}} \\
+    4 & 1.65 & 0 & 0.55 & 1.1 &  \\
+    5 & 1.1 & 0 & 0 & 1.1 & Ammonia adsorption \\
+    6 & 1 & 1 & 0 & 0 & Return to pristine state \\
+    7 & 0.55 & 0 & 0.55 & 0 & Growth of surface oxides \\
     \bottomrule
     \end{tabular}%
 }
-\caption{Different atmospheres used to probe the ammonia oxidation on Pt(100) and Pt(111) single crystals with SXRD.}
-\label{tab:ConditionsSXRD}
-\end{table}
-
-\begin{table}[!htb]
-\centering
-\resizebox{\textwidth}{!}{%
-    \begin{tabular}{@{}lll|l|lll|l@{}}
-    \toprule
-    \multicolumn{3}{l|}{Gas Flow (\unit{\ml\per\min})} & Total pressure (\unit{\milli\bar}) & \multicolumn{3}{l|}{Partial pressures (\unit{\milli\bar})} & Targeted information \\
-    \midrule
-    \midrule
-    \ce{Ar} & \ce{O_2} & \ce{NH_3} &  & \ce{Ar} & \ce{O_2} & \ce{NH_3} &  \\
-    \midrule
-    \midrule
-    50 & 0 & 0 & 1 & 1 & 0 & 0 & Catalyst state without reactants (unactive) \\
-    42 & 8 & 0 & 8.8 & 0 & 8.8 & 0 & Growth of surface oxides \\
-    41 & 8 & 1 & 9.9 & 0 & 8.8 & 1.1 & \multirow{2}{*}{\begin{tabular}[c]{@{}l@{}}Influence of (\ce{NH_3}/\ce{O_2}) ratio and impact \\ on/of potential surface oxides\end{tabular}} \\
-    48.5 & 0.5 & 1 & 1.65 & 0 & 0.55 & 1.1 &  \\
-    49 & 0 & 1 & 1.1 & 0 & 0 & 1.1 & Ammonia adsorption \\
-    50 & 0 & 0 & 1 & 1 & 0 & 0 & Return to pristine state \\
-    49.5 & 0.5 & 0 & 0.55 & 0 & 0.55 & 0 & Growth of surface oxides \\
-    \bottomrule
-    \end{tabular}%
+\caption{
+    Different atmospheres used to probe the ammonia oxidation on Pt(100) and Pt(111) single crystals with NAP-XPS.
+    The duration of each condition was approximately \qty{5}{\hour}.
 }
-\caption{Different atmospheres used to probe the ammonia oxidation on Pt(100) and Pt(111) single crystals with NAP-XPS.}
 \label{tab:ConditionsXPS}
 \end{table}
+
+The use of a residual gas analyser during \textit{in-situ} and \textit{operando} XPS and SXRD experiments allowed us to monitor the sample's catalytic activity.
 
 \subsection{Experimental setup for SXRD experiments in the horizontal geometry}\label{sec:SXRDSetupH}
 
 The surface x-ray diffraction experiment was performed at the SixS beamline at the Synchrotron SOLEIL detailed in sec. \ref{sec:SIXS}.
-The diffractometer was used in a horizontal geometry (fig. \ref{fig:Diffractometer}), accommodating the large XCAT reactor that enables the possibility to clean the sample surface by sputtering (bombardment of Argon ions) and annealing directly in the reactor chamber, without having to expose the sample to air prior to the experiment.
+The diffractometer was used in a horizontal geometry (fig. \ref{fig:Diffractometer}), accommodating the large XCAT reactor that enables the possibility to clean the sample surface by sputtering (bombardment of argon ions) and annealing directly in the reactor chamber, without having to expose the sample to air prior to the experiment.
 Two successive sputtering and annealing cycles have been carried out before the start of the SXRD experiment.
+
 To do so, the reactor cell was brought to low pressure by respectively closing and opening the entrance and exit valves, while pumping the reactor volume.
 The volume inside the XCAT reactor was increased by \textit{opening} the chamber (fig. \ref{fig:SampleSXRD}) while the height of the sample was changed so that the ion gun situated on the side of the XCAT reactor is aligned with the sample surface.
 The sputtering current resulting from the impact of ions on the sample surface was measured by a circuit directly connected to the sample.
@@ -105,9 +119,10 @@ The same procedure was applied to both Pt(111) and Pt(100) surfaces.
 The experiment was performed at an energy of \qty{18.44}{\keV}.
 The alignment of the beam was performed with the direct beam using the same procedure detailed previously in sec. \ref{sec:SXRDSetupV}.
 In the horizontal configuration, the incident angle is $\beta$, set to grazing incidence so that the beam recovers the entire sample surface.
-The beam footprint is larger than the sample which presents a round shape (diameter \qty{\approx 8}{\mm} - fig. \ref{fig:SampleSXRD}), allowing us to consider that the beam is always covering the entire sample surface, thereby ignoring illumination effects, \textit{i.e} the loss of intensity during measurement due to a loss of alignment from the rotation of the sample plane.
+The beam footprint is larger than the sample which presents a round shape (diameter \qty{\approx 8}{\mm} - fig. \ref{fig:SampleSXRD}).
+This allows us to consider that the beam is always covering the entire sample surface, thereby ignoring illumination effects, \textit{i.e} the loss of intensity during measurement due to a loss of alignment from the rotation of the sample plane.
 Crystal truncation rods were performed in the out-of-plane direction, perpendicular to the sample plane, \textit{i.e.} in the vertical plane ($\vec{x}, \vec{z}$) to maximise the intensity of the scattered field and to ignore polarisation effects in the evolution of the CTR intensity (fig. \ref{fig:polarization_effect}).
-The sample plane was realigned at the beginning of each condition to ensure that the beam consistently impinges on the sample surface.
+The sample plane was verified at the beginning of each condition to ensure that the beam consistently impinges on the sample surface.
 The orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also recomputed by measuring two different Bragg peaks to be able to quickly navigate in the reciprocal space.
 
 \begin{figure}[!htb]
@@ -127,7 +142,8 @@ The orientation matrix $U$ of the crystal \parencite{Schleputz2011} was also rec
 
 The NAP-XPS experiment was performed at the B07 end station at the Diamond Light Source \parencite{Held2020}.
 The electron analyser axis is at an angle of \ang{60.1} with respect to the beam and tilted at \ang{30} with respect to the horizontal plane, \textit{i.e.} close to the magic angle with respect to the polarisation vector.
-The cone aperture of the analyser has a diameter equal to \qty{0.3}{\mm}, which is slightly larger than the footprint of the beam on the sample at normal emission equal to \qty{0.2}{\mm}.
+The cone aperture of the analyser has a diameter equal to \qty{0.3}{\mm}.
+%, which is slightly larger than the footprint of the beam on the sample at normal emission equal to \qty{0.2}{\mm}.
 Four different pumping stages protect the vacuum in the UHV section of the analyser from the endstation, that can reach a working pressure of \qty{100}{\milli\bar}.
 The ﬁrst two differential pumping stages each contain a quadrupole mass spectrometer used for the analysis of the sample environment, depending on the total pressure in the reactor cell.
 The increased attenuation through high pressures is compensated by limiting the path length to sub-millimetre range for electrons that travel through the atmosphere from the sample surface to the analyser, the typical working distance between cone aperture and sample is between \qty{0.2}{\mm} and \qty{0.3}{\mm}.
