--- a/Sections/5_Conclusion/Conclusion.tex
+++ b/Sections/5_Conclusion/Conclusion.tex
@@ -1,8 +1,14 @@
-\textcolor{red}{State the main conclusions of your study. State explicitly how and to what extent you have fulfilled your aims and objectives/answered your research questions/proved your hypotheses (whichever is appropriate). Your conclusions should follow logically from your findings and not contain any new material.}
-
 \section{Research aim}
 
 
 \section{Perspectives}
 
+Thus, it is not possible to determine the potential influence of the oxide thickness on the catalyst activity.
+Nevertheless, since no bulk oxide can be measured under reacting conditions,
+
+Additional measurements with first different exposition times to a pure oxygen atmosphere (while monitoring the thickness of the \ce{Pt_3O_4} layer), and secondly introducing ammonia in the reactor while comparing the product partial pressure could bring an answer to the role of \ce{Pt_3O_4} during ammonia oxidation.
+
 A detailed study of the impact of trying to improve the image resolution by increasing the distance from the centre of the Bragg peak by combining simulations and experimental reconstructions would be of great interest to the community to understand the impact of the $(\vec{q}-\vec{G}).\vec{u}_k<<1$ approximation.
+
+
+311 type facets
