--- a/Sections/6_Appendix/DiffractionVocab.tex
+++ b/Sections/6_Appendix/DiffractionVocab.tex
@@ -18,7 +18,7 @@
     (hkl) & Miller indices detailing orientation of a family of parallel crystalline planes. \\
     \{hkl\} & Equivalent families of crystallographic planes by lattice symmetry. \\
     $d_{hkl}$ & Interplanar spacing between (hkl) crystal planes (\unit{\angstrom}). \\
-    (h, k, l) & Coordinates of a point in reciprocal space, also used for designing the direction of crystal truncation rods. \\
+    (h, k, l) & Coordinates of a point in reciprocal space, also used for designing the direction of crystal truncation rods (L is then used).\\
     \end{tabular}%
 }
 \caption{
