--- a/Sections/6_Appendix/Pt100.tex
+++ b/Sections/6_Appendix/Pt100.tex
@@ -1,3 +1,22 @@
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/figures/hex_reconstruction.pdf}
+    \caption{
+    Sketch of Pt(111) surface unit cell vectors, together with the unit cell vectors corresponding to the unit cell with $\gamma=\ang{137.38}$ identified under \qty{10}{\milli\bar} of ammonia and \qty{5}{\milli\bar} of oxygen.
+    }
+    \label{fig:Pt100UnitCellsReconstruction}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhD/Figures/introduction/Pt3O4onPt100.pdf}
+    \caption{
+    Epitaxy relationship used when simulating structure factors for \ce{Pt_3O_4} on Pt(100) in a Pt(100)-(2x2)-R\ang{0} arrangement.
+    }
+    \label{fig:Pt3O4onPt100}
+\end{figure}
+
 \begin{figure}[!htb]
     \centering
     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2022_01_SXRD_Pt100/gas_analysis/figures/exp_before_heater_change_no_norm.pdf}
