--- a/Sections/6_Appendix/Pt111.tex
+++ b/Sections/6_Appendix/Pt111.tex
@@ -6,26 +6,53 @@
 %     \label{fig:HScan}
 % \end{figure}
 
+% \begin{figure}[!htb]
+%     \centering
+%     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_q_481-516_patched.pdf}
+%     \caption{
+%         Reciprocal space maps collected under \qty{420}{\milli\bar} of argon and \qty{80}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}after the introduction of oxygen.
+%         The angle between the gray vectors is equal to \ang{42.65}.
+%     }
+%     \label{fig:481QSpace}
+% \end{figure}
+
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_q_481-516_patched.pdf}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/rotated_reconstruction_cells.pdf}
     \caption{
-        Reciprocal space maps collected under \qty{420}{\milli\bar} of argon and \qty{80}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}after the introduction of oxygen.
-        The angle between the gray vectors is equal to \ang{42.65}.
+    Sketch of Pt(111) surface unit cell vectors, together with the unit cell vectors corresponding to the rotated hexagonal reconstruction identified under \qty{80}{\milli\bar} and \qty{5}{\milli\bar} of oxygen.
     }
-    \label{fig:481QSpace}
+    \label{fig:Pt111UnitCellsRotated}
 \end{figure}
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_q_2064-2072_patched_hex.pdf}
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/reconstruction_42punto65.pdf}
     \caption{
-        Reciprocal space maps collected under \qty{495}{\milli\bar} of argon and \qty{5}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}, from \qty{24}{\hour}\qty{22}{\minute} to \qty{25}{\hour}\qty{43}{\minute} after the introduction of oxygen.
-        The angle between vectors of the same color is \ang{120}.
-        The angle between vectors going from the center to neighbouring peaks at the same magnitude of the scattering vector (e.g. purple and gray peaks) is equal to \ang{12}.
+    Sketch of Pt(111) surface unit cell vectors, together with the unit cell vectors corresponding to the unit cell with $\gamma=\ang{137.38}$ identified under \qty{80}{\milli\bar} and \qty{5}{\milli\bar} of oxygen.
     }
-    \label{fig:2064QSpace}
+    \label{fig:Pt111UnitCellsReconstruction}
 \end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/alphapto2_reconstruction_cell.pdf}
+    \caption{
+    Sketch of Pt(111) surface unit cell vectors, together with the unit cell vectors corresponding to the $\alpha$\ce{Pt_O_2} surface oxide  identified under \qty{80}{\milli\bar} and \qty{5}{\milli\bar} of oxygen.
+    }
+    \label{fig:Pt111AlphaPtO2}
+\end{figure}
+
+% \begin{figure}[!htb]
+%     \centering
+%     \includegraphics[width=\textwidth]{/home/david/Documents/PhDScripts/SixS_2023_04_SXRD_Pt111/figures/map_q_2064-2072_patched_hex.pdf}
+%     \caption{
+%         Reciprocal space maps collected under \qty{495}{\milli\bar} of argon and \qty{5}{\milli\bar} of oxygen at \qty{450}{\degreeCelsius}, from \qty{24}{\hour}\qty{22}{\minute} to \qty{25}{\hour}\qty{43}{\minute} after the introduction of oxygen.
+%         The angle between vectors of the same color is \ang{120}.
+%         The angle between vectors going from the center to neighbouring peaks at the same magnitude of the scattering vector (e.g. purple and gray peaks) is equal to \ang{12}.
+%     }
+%     \label{fig:2064QSpace}
+% \end{figure}
 
 \begin{figure}[!htb]
     \centering
