--- a/references.bib
+++ b/references.bib
@@ -13,6 +13,41 @@ volume = {90},
 year = {2002}
 }
 
+@incollection{Unertl1996,
+title = {Chapter 1 - Surface Crystallography},
+editor = {W.N. Unertl},
+series = {Handbook of Surface Science},
+publisher = {North-Holland},
+volume = {1},
+pages = {3-49},
+year = {1996},
+booktitle = {Physical Structure},
+issn = {1573-4331},
+doi = {https://doi.org/10.1016/S1573-4331(96)80006-0},
+author = {W.N. Unertl}
+}
+
+@incollection{Goncharova2018,
+author = {Goncharova, Lyudmila V},
+title = {Surface structure in real and reciprocal space},
+booktitle = {Basic Surfaces and their Analysis},
+publisher = {Morgan \& Claypool Publishers},
+year = {2018},
+series = {2053-2571},
+type = {Book Chapter},
+pages = {3-1 to 3-16},
+abstract = {In this chapter we need to understand the structure of clean and adsorbate-covered
+            surfaces and use this as a foundation for understanding surface science problems. We
+            start with the surface structure of clean metal surfaces (substrate structure), and move
+            on to the surface in the presence of an adsorbate and that of the adsorbate (overlayer
+            structure). Surfaces are often periodic, and we examine Miller indices to define various
+            surface planes. Clean surfaces can exhibit relaxation, reconstruction or both, giving a
+            variety of potential binding sites of different coordination. Adsorbates can lead to
+            changes in the surface structure of the substrate.},
+doi = {10.1088/978-1-6817-4954-9ch3},
+isbn = {978-1-6817-4954-9}
+}
+
 @article{Bennett1961,
 author = {H. E. Bennett and J. O. Porteus},
 journal = {J. Opt. Soc. Am.},
@@ -6267,7 +6302,6 @@ doi={10.1038/s41467-018-04259-9},
    shorttitle = {Strain analysis by inversion of coherent {Bragg} {X}-ray diffraction intensity},
    doi = {10.1080/09500341003746645},
    abstract = {Bragg coherent X-ray diffraction imaging is demonstrated with a micro-focused illumination. The 2D projected density of the 3D nano-crystal is successfully retrieved from the inversion of its diffraction intensity pattern. The analysis of the phase field at the sample position, which holds in principle the strain information, emphasizes the high sensitivity of the technique with regard to the wavefront structure. The ptychography approach is a proposed solution to discriminate the wavefront function from the sample electron density distribution. It is based on a redundancy of the collected information obtained by measuring a series of diffraction patterns for different but overlapping beam positions onto the sample. Applicability to the Bragg geometry still needs to be demonstrated.},
-   language = {English},
    number = {9},
    journal = {Journal of Modern Optics},
    author = {Chamard, V. and Dolle, M. and Baldinozzi, G. and Livet, F. and de Boissieu, M. and Labat, S. and Picca, F. and Mocuta, C. and Donnadieu, P. and Metzger, T. H.},
