--- a/Sections/2_Theory_Models/BCDI.tex
+++ b/Sections/2_Theory_Models/BCDI.tex
@@ -295,13 +295,13 @@ The result depends on the algorithm input parameters, such as the minimum relati
     \resizebox{0.95\textwidth}{!}{%
     \begin{tabular}{@{}lllll@{}}
     \toprule
-    Facet id & Facet normal & Relative facet size & Average displacement (\unit{\angstrom})& Average strain (\num{e-4})\\
+    Facet id & Facet normal & Relative facet size & Average displacement (\unit{\angstrom}) & Average strain (\num{e-4})\\
     \midrule
-    1 & $(1, 1, 1)$                   & \num{0.106} & \num{0.080 \pm 0.173}  & \num{-0.28 \pm 0.51}\\
-    2 & $(\bar{1}, \bar{1}, \bar{1})$ & \num{0.223} & \num{0.052 \pm 0.260}  & \num{-1.17 \pm 0.64}\\
-    3 & $(1, \bar{1}, 0)$             & \num{0.106} & \num{0.080 \pm 0.173}  & \num{-0.28 \pm 0.51}\\
-    4 & $(1, 0, 0)$                   & \num{0.096} & \num{0.137 \pm 0.192}  & \num{0.27 \pm 0.49}\\
-    0 & Edges and corner              & NaN         & \num{-0.224 \pm 0.259} & \num{0.20 \pm 0.86}\\
+    0 & Edges and corner            & NaN         & \num{-0.224 \pm 0.259} & \num{0.20 \pm 0.86}\\
+    1 & $(1 1 1)$                   & \num{0.106} & \num{0.080 \pm 0.173}  & \num{-0.28 \pm 0.51}\\
+    2 & $(\bar{1} \bar{1} \bar{1})$ & \num{0.223} & \num{0.052 \pm 0.260}  & \num{-1.17 \pm 0.64}\\
+    3 & $(1 \bar{1} 0)$             & \num{0.106} & \num{0.080 \pm 0.173}  & \num{-0.28 \pm 0.51}\\
+    4 & $(1 0 0)$                   & \num{0.096} & \num{0.137 \pm 0.192}  & \num{0.27 \pm 0.49}\\
     \bottomrule
     \end{tabular}
     }
