--- a/Sections/2_Theory_Models/SixS.tex
+++ b/Sections/2_Theory_Models/SixS.tex
@@ -188,10 +188,9 @@ It is also possible to heat the sample up to \qty{900}{\degreeCelsius} for an ex
 
 \begin{figure}[!htb]
     \centering
-    \includegraphics[trim=10 325 350 64, clip, width=0.8\textwidth]{/home/david/Documents/PhD/Figures/sixs/SampleHolder.pdf}
+    \includegraphics[width=0.8\textwidth]{/home/david/Documents/PhD/Figures/sixs/SampleHolderEdited.pdf}
     \caption{
         Sample holder used for the XCAT catalysis reactor.
-        \textcolor{Important}{TRY TO FIX WORDS, MAYBE TICKZ ?, add ceramic}
     }
     \label{fig:SampleHolder}
 \end{figure}
